# pytest-sqlalchemy-mock

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest_sqlalchemy_mock.py  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: deploy.yaml  tests.yaml
pytest_sqlalchemy_mock/: model_mocker.py
src/pytest_sqlalchemy_mock/: base.py  model_mocker.py
tests/: conftest.py  data.py  db.py  test_pytest_sqlalchemy_mock.py
