[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-sqlalchemy-mock"
version = "0.1.7"
license.file = "LICENSE"
description = "pytest sqlalchemy plugin for mock"
authors = [
    { name="Resul Yurttakalan", email="resulyrt93@gmail.com" },
]
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pytest>=7.0.0",
    "sqlalchemy>=2.0.6",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "build>=1.0.3",
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "pre-commit>=3.6.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/resulyrt93/pytest-sqlalchemy-mock"

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.isort]
force_grid_wrap = 2
profile = "black"
py_version = 312
src_paths = ["src"]
skip_glob = ["tests/conftest.py", "build/*", "dist/*",]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]

[tool.pytest]
norecursedirs = [
    "dist",
    "build",
    ".git",
    ".tox",
    ".eggs",
    "venv",
]

[project.entry-points."pytest11"]
pytest_sqlalchemy_mock = "pytest_sqlalchemy_mock.base"
